# Raisket-chatbot

./: .env.example  .gitignore  CLAUDE_VS_OPENAI.md  Makefile  NEXT_STEPS.md  OPEN_IN_VSCODE.bat  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_GITHUB.md  SETUP_GIT.md  STACK_DECISIONS.md  docker-compose.yml  init-git.bat
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  chat.py  health.py
backend/app/core/: config.py
backend/app/db/: __init__.py  supabase.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  chat_service.py  vector_store.py
docs/: RAG_ARCHITECTURE.md  supabase-schema.sql
frontend/: .env.local.example  README.md  next.config.ts  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/lib/: api.ts  supabase.ts  utils.ts
