[tool.poetry]
name = "raisket-backend"
version = "0.1.0"
description = "AI Financial Advisor API for Mexico"
authors = ["Raisket Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
python-dotenv = "^1.0.1"
langchain = "^0.3.0"
langchain-anthropic = "^0.2.0"
langchain-community = "^0.3.0"
anthropic = "^0.39.0"
supabase = "^2.9.0"
qdrant-client = "^1.11.0"
python-multipart = "^0.0.12"
httpx = "^0.27.0"
redis = "^5.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
black = "^24.10.0"
ruff = "^0.7.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
